# rm_motors_ros

./: .dockerignore  .gitmodules  80-can.link  80-can.network  Dockerfile  README.md  defaults.yaml  gm6020_demo.sh
.devcontainer/: devcontainer.json
docker/: .dockerignore  Dockerfile  colcon_entrypoint.sh
gm6020_can/: Cargo.toml  Config.cmake.in  build.rs  package.xml
gm6020_can/examples/: gm6020_can_test.rs
gm6020_example/: CMakeLists.txt  gm6020_example.xml  package.xml  setup.cfg  setup.py
gm6020_example/bringup/config/: gm6020_pid.yaml
gm6020_example/config/: gm6020_controllers.yaml  gm6020_pid.yaml
gm6020_example/description/ros2_control/: gm6020.ros2_control.xacro
gm6020_example/launch/: gm6020.launch.py
gm6020_example/urdf/: gm6020.ros2_control.xacro  gm6020.urdf.xacro  gm6020_description.urdf.xacro
gm6020_hw/: CMakeLists.txt  gm6020_hw.xml  package.xml
gm6020_hw/gm6020_can/: Cargo.toml
gm6020_hw/gm6020_can/src/: lib.rs
gm6020_hw/gm6020_can_new/: .gitignore  CMakeLists.txt
gm6020_hw/hardware/: gm6020.cpp  gm6020_hw.cpp
gm6020_hw/hardware/include/gm6020_can/: gm6020_can.h
gm6020_hw/hardware/include/gm6020_hw/: gm6020.hpp  gm6020_hw.hpp
gm6020_hw/src/: gm6020_can_test.cpp
gm6020_ros/: CMakeLists.txt  README.md  gm6020_ros.xml  package.xml
gm6020_ros/hardware/: gm6020_ros.cpp
gm6020_ros/hardware/include/ros2_control_demo_example_2/: gm6020_ros.hpp
gm6020_ros/include/gm6020_ros/: gm6020_ros.hpp  visibility_control.h
gm6020_ros/src/: gm6020_can_test.cpp  gm6020_ros.cpp
gm6020_ros_example/: CMakeLists.txt  gm6020.urdf.xacro  package.xml
gm6020_ros_example/launch/: gm6020.launch.py
rm_motors_example/: package.xml  setup.cfg  setup.py
rm_motors_example/config/: rm_motors_controllers.yaml
rm_motors_example/launch/: rm_motors.launch.py
rm_motors_example/urdf/: rm_motors.ros2_control.xacro  rm_motors.urdf.xacro  rm_motors_description.urdf.xacro
rm_motors_hw/: CMakeLists.txt  package.xml  rm_motors_hw.xml
rm_motors_hw/hardware/: rm_motors_hw.cpp
rm_motors_hw/hardware/include/rm_motors_hw/: rm_motors_hw.hpp
ros2_control_demos/: README.md
ros2_control_demos/Dockerfile/: Dockerfile
ros2_control_demos/docker/: Dockerfile  entrypoint.sh
ros2_control_demos/example_1/: CMakeLists.txt  package.xml
ros2_control_demos/example_1/bringup/config/: rrbot_controllers.yaml
ros2_control_demos/example_1/bringup/launch/: rrbot.launch.py
ros2_control_demos/example_1/description/launch/: view_robot.launch.py
ros2_control_demos/example_1/description/ros2_control/: rrbot.ros2_control.xacro
ros2_control_demos/example_1/description/urdf/: rrbot.urdf.xacro
ros2_control_demos/example_1/doc/: userdoc.rst
ros2_control_demos/example_1/hardware/: rrbot.cpp
ros2_control_demos/example_1/hardware/include/ros2_control_demo_example_1/: rrbot.hpp
ros2_control_demos/example_1/test/: test_rrbot_launch.py
ros2_control_demos/ros2_control_demos/: package.xml
ros2_control_demos/rrbot/urdf/: rrbot_description.urdf.xacro
ros2_control_demos/rrbot_example/: package.xml  setup.cfg  setup.py
ros2_control_demos/rrbot_example/bringup/config/: rrbot_joint_trajectory_publisher.yaml
ros2_control_demos/rrbot_example/bringup/launch/: rrbot.launch.py
ros2_control_demos/rrbot_example/config/: rrbot_controllers.yaml
ros2_control_demos/rrbot_example/description/launch/: view_robot.launch.py
ros2_control_demos/rrbot_example/description/ros2_control/: rrbot.ros2_control.xacro
ros2_control_demos/rrbot_example/description/urdf/: rrbot.urdf.xacro
ros2_control_demos/rrbot_example/launch/: rrbot.launch.py
ros2_control_demos/rrbot_example/urdf/: rrbot.ros2_control.xacro  rrbot.urdf.xacro
ros2_control_demos/rrbot_hw/: CMakeLists.txt  package.xml  rrbot_hw.xml
ros2_control_demos/rrbot_hw/hardware/: rrbot.cpp
ros2_control_demos/rrbot_hw/hardware/include/rrbot_hw/: rrbot.hpp
