<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gm6020_ros_example</name>
  <version>0.0.0</version>
  <description>Example PID controller for gm6020_ros</description>
  <maintainer email="matthewjforan@gmail.com">Matthew Foran</maintainer>
  <license>MPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gm6020_ros</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>pid_controller</depend>
  <depend>ros2controlcli</depend>
  <depend>controller_manager</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
