[package]
name = "gm6020_can"
version = "0.1.0"
edition = "2021"
authors = [
    "Matthew Foran <matthewjforan@gmail.com>",
]
repository = "https://github.com/mjforan/gm6020_can"
license = "MPL 2.0"
description = "CAN bus control interface of RoboMaster GM6020 motor"

[dependencies]
embedded-can = "0.4.1"
futures = "0.3.30"
socketcan = "3.3.0"

[build-dependencies]
cbindgen = "0.26.0"

[lib]
name = "gm6020_can"
crate-type = ["staticlib", "cdylib", "lib"]

[[example]]
name = "gm6020_can_test"
path = "examples/gm6020_can_test.rs"
